[build-system]
requires = [
  "setuptools >= 61.0.0",
  "wheel",
]
build-backend = "setuptools.build_meta"

[project]
name = "reportbro-lib"
version = "3.0.4"
description = "Generate PDF and Excel reports from visually designed templates"
license = {file = "LICENSE"}
authors = [
    {email = "alex@reportbro.com"},
    {name = "jobsta"}
]
readme = "README.rst"

keywords = ["pdf", "excel", "report", "generate", "create", "web", "template", "layout"]

classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "License :: OSI Approved :: GNU Affero General Public License v3",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10"
]

dependencies = [
    "Babel>=2.10.2",
    "fpdf2==2.5.7",
    "reportbro-simpleeval>=0.9.11",
    "Pillow==9.3.0",
    "qrcode==7.3.1",
    "XlsxWriter==3.0.3"
]

[project.urls]
homepage = "https://www.reportbro.com"
repository = "https://github.com/jobsta/reportbro-lib"
documentation = "https://www.reportbro.com/doc/installation"


[tool.setuptools]
packages = ["reportbro"]
